--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,14 @@ version: 1.0.0
 author: Jermaine Oppong <email@example.com>
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: '>=2.16.1 <3.0.0'
 
-#dependencies:
-#  path: ^1.4.1
+
+# dependencies:
+#   path: ^1.7.0
 
 dev_dependencies:
-  build_runner: ^0.10.0
-  build_web_compilers: ^0.4.0
+  build_runner: ^2.1.4
+  build_web_compilers: ^3.2.1
+  lints: ^1.0.0
+
